--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Savvy Coders Student Showcase</title>
-
     <!-- resets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
@@ -11,6 +10,7 @@
     <link rel="stylesheet" href="theme/lib/grid.css" type="text/css">
 
     <!--put all custom styles in this stylesheet only, please!-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="theme/style.css" type="text/css" />
 </head>
 <body>
@@ -23,11 +23,20 @@
         <div>THREE</div>
         <div>FOUR</div>
         <div>FIVE</div>
-        <div>
-            <a href="https://github.com/drewroby">Find Drew Roby on GitHub</a>
-            <img src="assets/roby.jpg" alt="Picture not available">
+        <div class="six">
+          <!-- <img src="assets/b6gradient.jpeg" alt="background"> -->
+          <ul>
+            <h1 id="header6">Drew Roby</h1>
+            <ul>
+              <li><a href="https://github.com/DrewRoby"><i class="fab fa-github"></i></a></li>
+              <li><a href="https://linkedin.com/in/DrewRoby"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="mailto:drew.roby@gmail.com?Subject=Student%20Portfolio"><i class="fas fa-envelope-square"></i></a></li>
+            </ul>
+            <img src="/assets/roby.jpg" alt="Picture not available">
             <p>"Time is an illusion.  Lunchtime doubly so." ~Douglas Adams</p>
             <p>"Bowties and Hitchhiker quotes are for nerrrrds." ~Everyone</p>
+
+          </ul>
         </div>
         <div>SEVEN</div>
         <div>EIGHT</div>
