Finalize showcase styling

--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
           <!-- <img src="assets/b6gradient.jpeg" alt="background"> -->
           <ul>
             <h1 id="header6">Drew Roby</h1>
-            <ul>
-              <li><a href="https://github.com/DrewRoby"><i class="fab fa-github"></i></a></li>
-              <li><a href="https://linkedin.com/in/DrewRoby"><i class="fab fa-linkedin"></i></a></li>
-              <li><a href="mailto:drew.roby@gmail.com?Subject=Student%20Portfolio"><i class="fas fa-envelope-square"></i></a></li>
-            </ul>
-            <img src="/assets/roby.jpg" alt="Picture not available">
+            <div id="sixLinksAndPicture">
+              <ul>
+                <li><a href="https://github.com/DrewRoby"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://linkedin.com/in/DrewRoby"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="mailto:drew.roby@gmail.com?Subject=Student%20Portfolio"><i class="fas fa-envelope-square"></i></a></li>
+              </ul>
+              <img src="/assets/roby.jpg" alt="Picture not available">
+              
+            </div>
             <p>"Time is an illusion.  Lunchtime doubly so." ~Douglas Adams</p>
             <p>"Bowties and Hitchhiker quotes are for nerrrrds." ~Everyone</p>
 
